--- a/styles.css
+++ b/styles.css
@@ -13,35 +13,35 @@ body {
   align-items: center;
   text-align: center;
   height: 100vh;
-  padding-bottom: 15vh;
 }
 
 h1 {
   color: #FFD700;
-  font-size: 8vh;
-  margin-bottom: 7vh;
+  font-size: 10vw;
 }
 
 .logo img {
   height: 30vh;
+  margin: 6vh auto;
 }
 
 .download-appstore img {
   height: 10vh;
-  margin: 7vh auto 2vh;
+  margin: 0 auto 2vh;
 }
 
 p {
   width: 100vw;
-  color: #E5E5E5;
+  color: #FFD700;
   font-size: 2vh;
+  margin-bottom: 15vh;
 }
 
 footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+  flex-direction: row;
   position: absolute;
   bottom: 0;
   background: #FFD700;
@@ -49,11 +49,19 @@ footer {
   width: 100vw;
 }
 
-footer h2 {
-  color: #E5E5E5;
-  font-size: 6vh;
+footer img {
+  height: 6vh;
+  margin: auto 2vw;
 }
 
-footer img {
-  height: 7vh;
+@media only screen and (min-width: 480px) and (max-width: 960px) {
+  h1 {
+    font-size: 7vw;
+  }
+}
+
+@media only screen and (min-width: 961px) {
+  h1 {
+    font-size: 6vw;
+  }
 }
